Use local based ccache for Mac build instead of sscache. (#28)
* GH-36209: [Java] Upgrade Netty due to security vulnerability (#36211)

Upgrading Netty dependency due to CVE https://github.com/advisories/GHSA-6mjq-h674-j845
This also requires a patch to arrow-memory

Upgrading Netty, gRPC and Protobuf dependencies

Existing tests

No

**This PR contains a "Critical Fix".**

netty-handler SniHandler 16MB allocation

The SniHandler can allocate up to 16MB of heap for each channel during the TLS handshake. When the handler or the channel does not have an idle timeout, it can be used to make a TCP server using the SniHandler to allocate 16MB of heap.

https://github.com/advisories/GHSA-6mjq-h674-j845

* Closes: #36209

Authored-by: Bryan Cutler <cutlerb@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>

* Restore jackson version.

* Use local based ccache for Mac build instead of sscache.

---------

Signed-off-by: David Li <li.davidm96@gmail.com>
Co-authored-by: Bryan Cutler <cutlerb@gmail.com>

--- a/dev/tasks/java-jars/github.yml
+++ b/dev/tasks/java-jars/github.yml
@@ -102,7 +102,7 @@ jobs:
           brew bundle --file=arrow/java/Brewfile
       - name: Build C++ libraries
         env:
-        {{ macros.github_set_sccache_envvars()|indent(8) }}
+          ARROW_USE_CCACHE: "ON"
         run: |
           set -e
           # make brew Java available to CMake
